# echo-word

./: .gitignore  CLAUDE.md  create_dict.js  eslint.config.js  index.html  package-lock.json  package.json  popup.html  splashscreen.html  tailwind.config.ts  tsconfig.node.json  vite.config.ts
docs/: PRD.md  development-roadmap.md  feature-implementation.md  technical-design.md  workflow-guide.md
docs/cycles/: cycle-01-foundation.md  cycle-02-word-translation.md  cycle-03-sentence-translation.md  cycle-04-mvp-rc.md  cycle-05-p1-experience.md  cycle-06-extensions.md
public/: translation-icon.html
src/: App.tsx  main.tsx  popup.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icon.html  generate_icon.py  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: baidu.rs  deepl.rs  ecdict.rs  http.rs  mod.rs  ollama.rs  openai.rs  provider.rs  signing.rs  tencent.rs  youdao.rs
src-tauri/src/commands/: debug.rs  favorite.rs  history.rs  mod.rs  settings.rs  translate.rs
src-tauri/src/db/: connection.rs  migration.rs
src-tauri/src/db/migrations/: v001_init.sql
src-tauri/src/http_server/: mod.rs
src-tauri/src/services/: cache.rs  clipboard.rs  dev_name.rs  global_selection.rs  mod.rs  phonetic.rs  runtime.rs  selection.rs  translator.rs
src-tauri/src/utils/: crypto.rs  mod.rs  platform.rs
src/components/onboarding/: ApiKeyStep.tsx  PermissionStep.tsx  ShortcutStep.tsx  Stepper.tsx  WelcomeStep.tsx
src/components/popup/: ActionBar.tsx  PopupWindow.tsx  SentenceResult.tsx  WordResult.tsx
src/components/settings/: DictionaryTab.tsx  GeneralTab.tsx  ShortcutTab.tsx  TranslationTab.tsx  TranslationWorkbench.tsx
src/components/translation/: ModeSwitch.tsx  (+2 more)
src/hooks/: useFavorite.ts  useI18n.ts  useTauriTranslationEvents.ts  useTheme.ts  useTranslation.ts
src/i18n/: en.ts  zh-CN.ts
src/lib/: tauri.ts  tts.ts  utils.ts
src/pages/: DebugPage.tsx  FavoritesPage.tsx  HistoryPage.tsx  OnboardingPage.tsx  SettingsPage.tsx
src/stores/: settingsStore.ts  translationStore.ts  uiStore.ts
src/styles/: globals.css
(+8 files in other folders)
