[package]
name = "echo-word"
version = "0.1.0"
edition = "2021"
description = "EchoWord desktop application"
authors = ["OpenAI Codex"]
license = "MIT"

[lib]
name = "echo_word_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
