[package]
name = "echo-word"
version = "0.1.0"
edition = "2021"
description = "EchoWord desktop application"
authors = ["OpenAI Codex"]
license = "MIT"

[lib]
name = "echo_word_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hmac = "0.12"
lru = "0.12"
log = "0.4"
md-5 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "socks"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tiny_http = "0.12"
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }
